// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompositeAuth render should correctly render CompositeAuth component 1`] = `
<div>
  <auth-form-stub></auth-form-stub>
</div>
`;

exports[`CompositeAuth render should render auth form by default 1`] = `
<div>
  <auth-form-stub></auth-form-stub>
</div>
`;

exports[`CompositeAuth render should render message form 1`] = `
<div>
  <message-form-stub message="" closable="true"></message-form-stub>
</div>
`;

exports[`CompositeAuth render should render opt form 1`] = `
<div>
  <otp-form-stub></otp-form-stub>
</div>
`;
